fix: graph overspill

--- a/public/style.scss
+++ b/public/style.scss
@@ -518,3 +518,10 @@ footer {
   color: rgb(255, 255, 255);
   mix-blend-mode: multiply;
 }
+
+.rdr-chart {
+  display: flex;
+  justify-content: center;
+  margin: 1em;
+  transition: opacity 0.4s ease;
+}
